apps/linkding/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
  name: linkding
spec:
  ingressClassName: traefik
  rules:
  - host: linkding.localhost
    http:
      paths:
      - backend:
          service:
            name: linkding
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - linkding.localhost
    secretName: linkding-tls
